
1.5.4 2024-09-12 20:52 Developer Release (Work In Progress)

-   GOALS 1.5.4
    -   F1 Allow database entity helpers to be assigned values more than
        once.
    -   T2 Increase DBIx::Squirrel::st test coverage appreciably from
        63.3 pc.
    -   D3 Improve the SYNOPSIS, which is too long and wastes far too
        much space covering activities that can be done with the DBI.

    -   A few improvements added to the Fernet encryption package.
    1.5.3
    -   Added a new "slurp" exported function to DBIx::Squirrel::Utils
        to read binary files, decrypt them, uncompress them, and parse
        them as JSON data. This is used by the DBIx::Squirrel::db
        "load_tuples" method for bulk populating/depopulating tables
        using a callback for the work. I found that I urgently needed
        the feature in another project, so I added it here to be used
        there.
    -   Minor documentation edits.
-   1.5.2
    -   IMPROVED the README page, which sucked. The POD page is still
        there, but it is sulking in a separate document. 
    -   IMPROVED the DESCRIPTION, which was too short and did a poor
        job of marketing the package.
    -   ADDED new iterator export "result_number", which is a 1-based
        alternative to "result_offset".
    -   ADDED new iterator predicate "is_active", which is true if the
        underlying statement is still active. This plugs an oversight
        in testing "next" for truthy values (which is not always a
        guaranteed outcome with user land transformations).
    -   ADDED new iterator predicate "not_active", to complement the
        newly added "is_active" predicate.
-   1.5.1
    -   Fixed issue affecting Perl 5.10.1 build checks on GitHub runner
        that wasn't able to install Test::MockModule due to two of its
        own dependencies having build issues. Worked around by dropping
        Test::MockModule as a build requirement and mock-patching the