@@ -12,7 +12,8 @@ Revision history for DBIx-Squirrel
     -   D3 Improve the SYNOPSIS, which is too long and wastes far too
         much space covering activities that can be done with the DBI.
 
-    -   A few improvements added to the Fernet encryption package.
+    -   A few improvements to the DBIx::Squirrel::Crypt::Fernet package
+        interface.
     1.5.3
     -   Added a new "slurp" exported function to DBIx::Squirrel::Utils
         to read binary files, decrypt them, uncompress them, and parse
